# loglib

./: .gitignore  CMakeLists.txt  README.md
loglib/: loglib.h
loglib/include/: escaping.h  formating.h  handlers.h  loglib.h
loglib/src/: emiter.c  escaping.c  formating.c  handlers.c  loglib.c
